[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/platformer/climb_wall.png" type="Texture" id=1]
[ext_resource path="res://scenes_two/ClimbingWall.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 256.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 250.5 )

[node name="ClimbingWall" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4, -0.5 )
shape = SubResource( 1 )

[node name="solidarea" type="StaticBody2D" parent="."]

[node name="SolidShape" type="CollisionShape2D" parent="solidarea"]
position = Vector2( 0, -2.5 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
